--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,55 @@
 		  <version>4.0.1</version>
 		  <scope>provided</scope>
 	  </dependency>
+	  <dependency>
+		  <groupId>javax.enterprise</groupId>
+		  <artifactId>cdi-api</artifactId>
+		  <version>2.0</version>
+		  <scope>provided</scope>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-lang3</artifactId>
+		  <version>3.11</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>commons-beanutils</groupId>
+		  <artifactId>commons-beanutils</artifactId>
+		  <version>1.9.4</version>
+	  </dependency>
+
+	  <!-- Import hibernate -->
+	  <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-entitymanager</artifactId>
+		  <version>5.4.19.Final</version>
+		  <scope>provided</scope>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-validator</artifactId>
+		  <version>6.1.5.Final</version>
+		  <scope>provided</scope>
+	  </dependency>
+
+
+	  <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+	  <dependency>
+		  <groupId>jstl</groupId>
+		  <artifactId>jstl</artifactId>
+		  <version>1.2</version>
+	  </dependency>
+
+	  <!-- https://mvnrepository.com/artifact/taglibs/standard -->
+	  <dependency>
+		  <groupId>taglibs</groupId>
+		  <artifactId>standard</artifactId>
+		  <version>1.1.2</version>
+	  </dependency>
+
   </dependencies>
   <build>
     <finalName>TapnShop</finalName>
@@ -77,6 +126,19 @@
 			  <version>3.8.0</version>
 			  <configuration>
 				  <release>14</release>
+			  </configuration>
+		  </plugin>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>2.22.2</version>
+		  </plugin>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-enforcer-plugin</artifactId>
+			  <version>1.4.1</version>
+			  <configuration>
+				  <rules><dependencyConvergence/></rules>
 			  </configuration>
 		  </plugin>
 	  </plugins>
